[package]
name = "hik-sadp"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.209", features = ["derive"] }
serde-xml-rs = "0.6.0"
socket2 = { version = "0.3.19", features = ["reuseport"] }

[dependencies.uuid]
version = "1.10.0"
features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
